--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT = 8000
-JWT_ACCESS_TOKEN = SERECTKEY
-JWT_REFRESH_TOKEN = REFRESHKEY
+JWT_ACCESS_TOKEN = Tumeepower123
+JWT_REFRESH_TOKEN = Tumeepower123
